test/src/main/webapp/WEB-INF/view/error/userexist.jsp
<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
<!DOCTYPE html>
<html>
<head>
    <title>Errorpage - user exist</title>
</head>
<body>
<h1>User with this email already exists, please try using a new email or login</h1>
<h1></h1>
<a href="../">startpage</a>
</body>
</html>
